# whisper-rs

./: .gitignore  Cargo.toml  README.md
examples/: ree.rs  transcribe.rs
src/: audio.rs  decode.rs  lib.rs  model.rs  tokenize.rs  transcribe.rs
src/decode/: mod.rs
src/decode/extractor/: beam_search.rs  greedy.rs  mod.rs
src/decode/filter/: mod.rs  suppress_blanks.rs  suppress_tokens.rs  timestamp_tokens.rs
src/decode/sequencer/: max_likelihood.rs  mod.rs
src/util/: mod.rs  test.rs
test/data/: mel-filter-8x8.csv  mel-spectrogram.csv
tokenizer/: gpt2.json
