[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

# so that we can use cargo flamegraph
[profile.release]
debug = true

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
hound = "3.5.0"
mel_filter = "0.1.1"
once_cell = "1.16.0"
rubato = "0.12.0"
symphonia = { version = "0.5.1", features = ["flac", "mp3"] }
tch = "0.9.0"
tokenizers = "0.13.2"

[dev-dependencies]
csv = "1.1.6"
hound = "3.5.0"
