[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

# so that we can use cargo flamegraph
[profile.release]
debug = true

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
mel_filter = "0.1.1"
once_cell = "1.16.0"
rubato = "0.12.0"
symphonia = { version = "0.5.1", features = ["flac", "mp3"] }
tch = { git = "https://github.com/laptou/tch-rs", branch = "main", default-features = false }
tokenizers = { version = "0.13.2", default-features = false, features = ["onig"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
csv = "1.1.6"
hound = "3.5.0"
